--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -6,12 +6,17 @@
     <section>
         <h2>Ajouter un produit</h2>
         <form th:action="@{/products/add}" method="post" th:object="${product}">
-            <label for="name">Nom du produit :
-                <input type="text" name="name" placeholder="Nom du produit" required th:field="*{name}">
-            </label>
-            <label for="price">Prix du produit :
-                <input type="number" name="price" placeholder="Prix du produit" step="0.01" required>
-            </label>
+            <div>
+                <label for="name">Nom du produit :</label>
+                <input type="text" id="name" placeholder="Nom du produit" th:field="*{name}">
+                <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
+            </div>
+
+            <div>
+                <label for="price">Prix du produit :</label>
+                <input type="number" id="price" placeholder="Prix du produit" step="0.01" th:field="*{price}">
+                <div th:if="${#fields.hasErrors('price')}" th:errors="*{price}" style="color: red"></div>
+            </div>
             <button type="submit">Ajouter le produit</button>
             <a th:href="@{/products}">Retour à la liste des produits</a>
         </form>
