--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title th:text="#{home.title}">Accueil</title>
 </head>
 <body>
     <section>
-        <h1>bvn les reufs</h1>
-        <p>BONJOURBONJOUR</p>
+        <h1 th:text="#{home.title}">Page d'accueil</h1>
+        <p th:text="#{home.presentation}">salut salut</p>
     </section>
     
 </body>
